fixed text overflow of author in recipe card

--- a/frontend/styles/components/_recipeCard.module.scss
+++ b/frontend/styles/components/_recipeCard.module.scss
@@ -1,8 +1,6 @@
 .card_container {
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
     border-radius: 26px 0px 15px 15px;
-    // background-color: green;
-
     margin: auto;
     margin-block: 2.5rem;
     display: flex;
@@ -23,20 +21,24 @@
             position: relative;
             bottom: 2.5px;
             margin-left: 2%;
-            width: 55%;
-            display: flex;
+            width: 70%;
             flex-direction: column;
             justify-content: center;
 
+            display: -webkit-box;
+            overflow: hidden;
+            -webkit-line-clamp: 1;
+            text-overflow: hidden;
             .rating {
+                background-color: white;
                 display: flex;
-                width: 5rem;
+                width: 100%;
                 align-items: center;
-                padding: 0;
-                justify-content: center;
+                justify-content: flex-start;
 
                 .rating_icons {
                     display: flex;
+                    width: 3rem;
                 }
                 .rating_score {
                     margin-left: 3%;
